--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,15 +8,15 @@ spring:
     show-sql: true
     database: mysql
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/java_test
-    username: ${MYSQL_USER:root}
+    url: ${DATABASE_URL:jdbc:mysql://127.0.0.1:3306/wildcore_core}
+    username: ${DATABASE_USER:root}
     driver-class-name: com.mysql.jdbc.Driver
-    password: ${MYSQL_PASSWORD:12345}
+    password: ${DATABASE_PASSWORD:rootpassword}
 
   mail:
-    host: ${SMTP_HOST:localhost}
+    host: ${SMTP_HOST:example.com}
     port: ${SMTP_PORT:587}
-    username: ${SMTP_USERNAME:example@example.com}
+    username: ${SMTP_USERNAME:admin@example.com}
     password: ${SMTP_PASSWORD:password}
     properties:
       mail:
@@ -27,13 +27,13 @@ spring:
 
 wildcore:
   mail:
-    from: ${SMTP_USERNAME:example@example.com}
-    from_name: ${SMTP_FROM_NAME:From name}
+    from: ${SMTP_USERNAME:admin@example.com}
+    from_name: ${SMTP_FROM_NAME:wildcore}
     user:
       sent: true
-      template: notify_user.html
+      template: request_beta.html
     admin:
-      template: notify_admin.html
+      template: request_beta_admin.html
       sent: true
       addresses:
        - ${ADMIN_EMAIL:admin@example.com}
